--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.14.0",
     "class-validator": "^0.14.1",
     "firebase": "^10.12.3",
