--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.14.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "express": "^4.21.0",
     "firebase": "^10.12.3",
     "firebase-admin": "^12.2.0",
+    "morgan": "^1.10.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -77,5 +80,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "overrides": {
+    "express": "$express"
   }
 }
