--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.14.0",
+    "@types/circomlibjs": "^0.1.6",
+    "circomlibjs": "^0.1.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express": "^4.21.0",
@@ -39,7 +41,8 @@
     "morgan": "^1.10.0",
     "poseidon-lite": "^0.3.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "snarkjs": "^0.7.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
