--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@prisma/client": "^5.14.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "ethers": "^6.13.3",
     "express": "^4.21.0",
     "firebase": "^10.12.3",
     "firebase-admin": "^12.2.0",
