--- a/package.json
+++ b/package.json
@@ -31,14 +31,18 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.14.0",
+    "@types/qrcode": "^1.5.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ethers": "^6.13.3",
     "express": "^4.21.0",
     "firebase": "^10.12.3",
     "firebase-admin": "^12.2.0",
+    "handlebars": "^4.7.8",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.15",
     "poseidon-lite": "^0.3.0",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "snarkjs": "^0.7.4"
@@ -50,6 +54,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.16",
     "@types/snarkjs": "^0.7.8",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
