--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.14.0",
+    "@types/node-forge": "^1.3.11",
     "@types/qrcode": "^1.5.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -40,6 +41,7 @@
     "firebase-admin": "^12.2.0",
     "handlebars": "^4.7.8",
     "morgan": "^1.10.0",
+    "node-forge": "^1.3.1",
     "nodemailer": "^6.9.15",
     "poseidon-lite": "^0.3.0",
     "qrcode": "^1.5.4",
