--- a/.ebextensions/prisma-setup.config
+++ b/.ebextensions/prisma-setup.config
@@ -1,7 +1,4 @@
-commands:
-  01_prisma_generate:
-    command: 'npx prisma generate'
-    ignoreErrors: false
-  02_prisma_migrate:
+container_commands:
+  01_prisma_migrate:
     command: 'npx prisma migrate deploy'
     ignoreErrors: false
