--- a/.ebextensions/prisma-setup.config
+++ b/.ebextensions/prisma-setup.config
@@ -1,4 +1,4 @@
 container_commands:
   01_prisma_migrate:
-    command: 'npx prisma migrate deploy'
+    command: 'node node_modules/prisma/build/index.js migrate deploy'
     ignoreErrors: false
