--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -21,6 +21,7 @@ artifacts:
   files:
     - dist/**/*
     - prisma/schema.prisma
+    - prisma/migrations/**/*
     - package.json
     - node_modules/**/*
     - .ebextensions/**/*
