--- a/.ebextensions/prisma-setup.config
+++ b/.ebextensions/prisma-setup.config
@@ -2,3 +2,6 @@ container_commands:
   01_prisma_migrate:
     command: 'node node_modules/prisma/build/index.js migrate deploy'
     ignoreErrors: false
+  02_prisma_seed:
+    command: 'npm run seed'
+    ignoreErrors: false
