Fix prisma seed command

--- a/.ebextensions/prisma-setup.config
+++ b/.ebextensions/prisma-setup.config
@@ -3,5 +3,5 @@ container_commands:
     command: 'node node_modules/prisma/build/index.js migrate deploy'
     ignoreErrors: false
   02_prisma_seed:
-    command: 'npm run seed'
+    command: 'find prisma/seeders -name '*.ts' -exec node_modules/.bin/ts-node {} \'
     ignoreErrors: false
