--- a/.ebextensions/prisma-setup.config
+++ b/.ebextensions/prisma-setup.config
@@ -3,5 +3,6 @@ container_commands:
     command: 'node node_modules/prisma/build/index.js migrate deploy'
     ignoreErrors: false
   02_prisma_seed:
-    command: 'find prisma/seeders -name '*.ts' -exec node_modules/.bin/ts-node {} \'
+    command: |
+      find prisma/seeders -name "*.ts" -exec node_modules/.bin/ts-node {} \\;
     ignoreErrors: false
