--- a/.ebextensions/prisma-setup.config
+++ b/.ebextensions/prisma-setup.config
@@ -4,5 +4,5 @@ container_commands:
     ignoreErrors: false
   02_prisma_seed:
     command: |
-      find prisma/seeders -name "*.ts" -exec node_modules/.bin/ts-node {} \;
+      find dist/prisma/seeders -name "*.js" -exec node {} \;
     ignoreErrors: false
