Fix drug seeders not idempotent

--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "psql-up": "docker compose -f db/docker-compose-db.yaml up -d",
     "psql-down": "docker compose -f db/docker-compose-db.yaml down",
     "cfix": "npm run format && npm run lint",
-    "seed": "find prisma/seeders -name '*.ts' -exec ts-node {} \\;",
-    "seed:test": "ts-node prisma/seeders/insurance_company.ts"
+    "seed": "npm run build && find dist/prisma/seeders -name '*.js' -exec node {} \\;"
   },
   "dependencies": {
     "@firebase/auth": "^1.7.5",
