--- a/.ebextensions/validium-setup.config
+++ b/.ebextensions/validium-setup.config
@@ -1,7 +1,7 @@
 container_commands:
     01_create_target_folder:
-        command: "mkdir -p /var/app/current/validium"
+        command: "mkdir -p /tmp/validium"
 
     02_copy_s3_folder:
         command: 
-            aws s3 cp s3://validium-assets/validium_data /var/app/current/validium --recursive
+            aws s3 cp s3://validium-assets/validium_data /tmp/validium --recursive
